# AiColonDiagnosis

./: .gitignore  README.md  app_pyside6.py  compare_models_tmp.py  dashboard.py  detect_realtime.py  main.py  mejores.txt  prepare_colon_dataset.py  prepare_dataset.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
comparacion_pred_catboostv1_y_v2/: resultados_nuevo_modelo.json  resultadosv1CatBoost.json
docs/: ia_imagen_medica_fases_2_3.md  ia_imagen_medica_fases_2_4.docx
models/: catboost_crc_risk_model.cbm  colonoscopy_maskrcnn_resnet50_meta.json  colonoscopy_yoloseg_meta.json  microscopy_meta.json
pacientes_prueba/: paciente_0.json  paciente_1.json  paciente_10.json  paciente_11.json  paciente_12.json  paciente_13.json  paciente_14.json  paciente_15.json  paciente_16.json  paciente_17.json  paciente_18.json  paciente_19.json  paciente_2.json  paciente_20.json  paciente_21.json  paciente_22.json  paciente_23.json  paciente_24.json  paciente_25.json  paciente_26.json  paciente_27.json  paciente_28.json  paciente_29.json  paciente_3.json  paciente_4.json  paciente_5.json  paciente_6.json  paciente_7.json  paciente_8.json  paciente_9.json
resultados/: paciente_00998877T_20260414_174503.json  paciente_10000020A_20260414_174508.json  paciente_10000021B_20260414_174513.json  paciente_10000021B_20260414_182542.json  paciente_10000022C_20260414_174517.json  paciente_10000023D_20260414_174523.json  paciente_10000024E_20260414_174529.json  paciente_10000025F_20260414_174534.json  paciente_10000026G_20260414_174538.json  paciente_10000027H_20260414_174543.json  paciente_10000028I_20260414_174548.json  paciente_10000029J_20260414_174553.json  paciente_11223344I_20260414_174401.json  paciente_11447722R_20260414_174450.json  paciente_19283746B_20260414_174331.json  paciente_22110033M_20260414_174424.json  paciente_22334455E_20260414_174343.json  paciente_33221144P_20260414_174438.json  paciente_33445566G_20260414_174352.json  paciente_44556677K_20260414_174414.json  paciente_47283910A_20260414_174326.json  paciente_47283910A_20260414_182557.json  paciente_47283910A_20260414_185458.json  paciente_55443322N_20260414_174429.json  paciente_55647382D_20260414_174339.json  paciente_66339900S_20260414_174456.json  paciente_66778899J_20260414_174408.json  paciente_77665544Q_20260414_174444.json  paciente_77889900H_20260414_174356.json  paciente_88374625C_20260414_174334.json  paciente_88990011L_20260414_174419.json  paciente_99001122F_20260414_174347.json  (+1 more)
(+26 files in other folders)
