[project]
name = "aicolondiagnosis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.55.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.21",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
